welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:16: error: type mismatch;
 found   : Unit
 required: Boolean
		return 
                ^Program:13: error: type mismatch;
 found   : Unit
 required: Boolean
	for (n <-1 to 6)
               ^